# CorePulse

./: CLAUDE.md  CMakeLists.txt  README.md  mechwarrior_project_plan (2).md  steel_mesh_format_spec.md  vcpkg.json
assets/models/: cube.gltf
assets/models/walkers/: light_mech.gltf  medium_mech.gltf
include/: Application.h  AssetManager.h  AudioManager.h  AudioSystem.h  Camera.h  Component.h  Components.h  CorePulseApp.h  Entity.h  GLTFLoader.h  Input.h  Material.h  MechExtensions.h  MechMovementSystem.h  Mesh.h  MissionLoader.h  MissionSystem.h  Renderer.h  Shader.h  System.h  Systems.h  Terrain.h  Texture.h  Window.h  World.h
scripts/: generate_sounds.py  generate_test_gltf.py
src/: Application.cpp  AssetManager.cpp  AudioManager.cpp  AudioSystem.cpp  Camera.cpp  CorePulseApp.cpp  Entity.cpp  GLTFLoader.cpp  Input.cpp  Material.cpp  MechExtensions.cpp  MechMovementSystem.cpp  Mesh.cpp  MissionLoader.cpp  MissionSystem.cpp  Renderer.cpp  Shader.cpp  Systems.cpp  Terrain.cpp  Texture.cpp  Window.cpp  World.cpp  main.cpp
tests/: CMakeLists.txt  test_main.cpp
